<resources>
    <string name="app_name">Nasa Image Viewer</string>
    <string name="no_connection_text">Oh no! Connectivity unavailable. Please move to a better location or connect to wifi</string>
    <string name="image_content_desc">image to be loaded</string>
    <string name="search_db">Search current data</string>
    <string name="search">Search</string>
    <string name="search_hint">What would you like to search for?</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="no_results">Sorry! There are no results available!</string>
    <string name="connection_lost">Uh oh! It appears your connection has been lost</string>
    <string name="load_result_error">There was a problem getting results.</string>
    <string name="title">Title: </string>
    <string name="author">Center(Author/Owner): </string>
    <string name="date">Date: </string>
    <string name="dismiss">Dismiss</string>
    <string name="header_title">Main Menu</string>
    <string name="header_text">Select an option below to get started!</string>
    <string name="epic_api_menu">Switch to EPIC image</string>
    <string name="search_api_menu">Switch to Bulk Image</string>
    <string name="monitor_menu">[Placeholder]</string>
</resources>